migrating to Spring Boot 3.2 and Java 21 using OpenRewrite